--- a/Nomad_JS_Chrome/#2 Practice/prac/index.html
+++ b/Nomad_JS_Chrome/#2 Practice/prac/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<h1 id="title">This Work!</h1>
+		<h1 id="title" class="btn">This Work!</h1>
 		
 		<script type="text/javascript" src="index.js"></script>
 	</body>
